--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <meta charset="utf-8">
     <!-- Title of the WebSite -->
+    <!--01110111 01100001 01101100 01110100 01100101 01110010 00100000 01000111 01100001 01100010 01110010 01101001 01100101 01101100-->
     <title>Pokedex</title>
     <!-- Pokeball Icon -->
     <link rel="icon" href="https://vignette.wikia.nocookie.net/the-pokemon-sun-and-moon/images/4/4c/Pokeball.png/revision/latest?cb=20161123053945">
@@ -33,8 +34,8 @@
           <div class="col-md-3 text-center col-sm-4" ng-repeat="y in Pokebola">
             <div class="divInfo">
               <!-- Pokemon Picture -->
-              <!-- <img class="pokePicture" src="{{x.sprites.front_default}}" alt="Poke"> -->
-              <img class="pokePicture" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png" alt="Poke">
+              <!-- <img class="pokePicture" src="{{x.sprites.front_default}}" alt=> -->
+              <img class="pokePicture" src="{{y.data.sprites.front_default}}" alt="Poke">
             </div>
             <!-- <div class="pokeName">{{x.data.name}}</div> -->
             <div class="pokeName">{{y.data.name}}</div>
